[package]
name = "line_segment_intersection"
description = "Find the intersection between two 2d line segments"
version = "0.1.1"
documentation = "https://docs.rs/line_segment_intersection"
homepage = "https://github.com/ucarion/line_segment_intersection"
repository = "https://github.com/ucarion/line_segment_intersection"
authors = ["Ulysse Carion <ulysse@ulysse.io>"]
license = "MIT"

[dependencies]
num-traits = "0.1"
