[package]
name = "line_intersection"
description = "Find the intersection between two 2d lines, rays, or line segments"
version = "0.4.0"
documentation = "https://docs.rs/line_intersection"
homepage = "https://github.com/ucarion/line_intersection"
repository = "https://github.com/ucarion/line_intersection"
authors = ["Ulysse Carion <ulysse@ulysse.io>"]
license = "MIT"

[dependencies]
geo = "0.18.0"

[features]
